# PyTranscribe

./: .gitignore  README.md  index.html  pyproject.toml  pytranscribe.html  robots.txt  search.json  settings.ini  sitemap.xml  transcribe.py
.github/workflows/: deploy.yaml  test.yaml
PyTranscribe/: _modidx.py  core.py
_docs/: index.html  jsontodictation.html  sitemap.xml
_proc/: 01_JsonToDictation.ipynb  01_PyTranscribe.ipynb  02_AWSTranscribe.ipynb  index.ipynb
nbs/: 01_JsonToDictation.ipynb  01_PyTranscribe.ipynb  index.ipynb  nbdev.yml  sidebar.yml
nbs/data/: transcribe_example.json
nbs/test_data/: transcribe_example.json
