[tool.poetry]
name = "pytranscribe"
version = "0.1.0"
description = "Python Module to Convert AWS Transcribe Data to Transcription Format"
authors = ["David Weinberg <david.weinberg@anlayzere.com>"]
license = "Apache2.0"
readme = "README.md"

packcages = [
    { include = "./PyTranscribe" },
]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.8"
jupyterlab-quarto = "^0.2.8"
nbdev = "^2.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
